Corrección de enlaces

--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
                 </div>
 
                 <div class="link">
-                    <a href="https://app.aluracursos.com/degree/certificate/2496a017-fcd0-4f21-a952-962373648004"
-                        target="_blank" title="Ir a Alura Latam">Ver certificado</a>
+                    <a href="https://portal.fup.edu.co/pregrado/ecologia/"
+                        target="_blank" title="Ir a Ecología FUP">Ver certificado</a>
                 </div>
 
             </div>
@@ -297,8 +297,8 @@
                 </div>
 
                 <div class="link">
-                    <a href="https://app.aluracursos.com/degree/certificate/2496a017-fcd0-4f21-a952-962373648004"
-                        target="_blank" title="Ir a Alura Latam">Ver certificado</a>
+                    <a href="https://certificados.sena.edu.co/CertificadoDigital/com.sena.consultacer"
+                        target="_blank" title="Ir a CERTIFICADOS SENA">Ver certificado</a>
                 </div>
 
             </div>
@@ -325,8 +325,8 @@
                 </div>
 
                 <div class="link">
-                    <a href="https://app.aluracursos.com/degree/certificate/2496a017-fcd0-4f21-a952-962373648004"
-                        target="_blank" title="Ir a Alura Latam">Ver certificado</a>
+                    <a href="https://app.aluracursos.com/user/erazobenitez/fullCertificate/4ac986031f51c75163cdc8ee46f1f89a"
+                        target="_blank" title="Ir a Alura Latam CERTIFICADO COMPLETO">Ver certificado</a>
                 </div>
 
             </div>
