--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es-ES">
 
 <head>
     <meta charset="UTF-8">
@@ -43,7 +43,7 @@
             <img src="logos/kike__logo.png" width="50px" alt="Logo Kike">
         </div>
         <div class="logo">
-            <a href="index.html">Enrique
+            <a href="index.html">Enrique 
                 <br>
                 <span class="negrita">Erazo</span></a>
         </div>
@@ -58,7 +58,7 @@
             <li><a href="#formacion" id="item__3">Formación</a></li>
             <li><a href="#cursos" id="item__4">Cursos</a></li>
             <li><a href="#proyectos" id="item__5">Proyectos</a></li>
-            <li><a href="#contacto" id="item__6">Contactanos</a></li>
+            <li><a href="#contacto" id="item__6">Contáctenos</a></li>
         </ul>
 
         <label for="nav__toggle" class="icon__burger">
@@ -229,7 +229,7 @@
             </div>
             <div class="card" id="world">
                 <i class="fa-solid fa-scroll fa-flip" style="--fa-flip-x: 1; --fa-flip-y: 0;"></i>
-                <h2>world</h2>
+                <h2>World</h2>
             </div>
             <div class="card" id="powerpoint">
                 <i class="fa-solid fa-circle-plus fa-beat"></i>
@@ -263,7 +263,7 @@
                 </div>
 
                 <div class="institucion">
-                    <h2>Fundación Universitaría de Popayán<br>FUP</h2>
+                    <h2>Fundación Universitaria de Popayán<br>FUP</h2>
                     <h2>Corporación UNIMINUTO</h2>
                 </div>
 
@@ -281,11 +281,11 @@
             <div class="paneles__formacion">
 
                 <div class="imagen">
-                    <img src="logos/sena.png" width="250px" alt="Logo de Fitec">
+                    <img src="logos/sena.png" width="250px" alt="Logo de SENA">
                 </div>
 
                 <div class="titulo">
-                    <h1>Especialización Tecnologica <br>Sistemas Gestión de Calidad</h1>
+                    <h1>Especialización Tecnológica <br>Sistemas Gestión de Calidad</h1>
                 </div>
 
                 <div class="institucion">
@@ -298,7 +298,7 @@
 
                 <div class="link">
                     <a href="https://certificados.sena.edu.co/CertificadoDigital/com.sena.consultacer"
-                        target="_blank" title="Ir a CERTIFICADOS SENA">Ver certificado</a>
+                        target="_blank" title="Ir a CERTIFICADOS SENA">Ver certificado </a>
                 </div>
 
             </div>
@@ -399,11 +399,31 @@
 
         <div class="proyecto">
             <div class="titulo">
+                <h1>Año: 2022 - Juego Ahorcado - javaScrip</h1>
+            </div>
+            <div class="cuerpo__imagen">
+                <p>Ingresa a la página haciendo clic en la imagen<a href="https://kikeerazo.github.io/juegoAhorcado/"
+                        target="_blank" rel="noopener noreferrer"><img src="Proyectos/ahorcado.JPG"
+                            title="Baby Shower" alt="Imagen Baby Shower"></a></p>
+            </div>
+            <br>
+
+            <div class="titulo">
                 <h1>Año: 2022 - Baby Shower - Sitio Web para celular</h1>
             </div>
             <div class="cuerpo__imagen">
                 <p>Ingresa a la página haciendo clic en la imagen<a href="https://erazobenitez.wixsite.com/babyshower"
                         target="_blank" rel="noopener noreferrer"><img src="Proyectos/babyshower.JPG"
+                            title="Baby Shower" alt="Imagen Baby Shower"></a></p>
+            </div>
+            <br>
+
+            <div class="titulo">
+                <h1>Año: 2022 - Encriptador y Desencriptador de Texto - javaScrip</h1>
+            </div>
+            <div class="cuerpo__imagen">
+                <p>Ingresa a la página haciendo clic en la imagen<a href="https://kikeerazo.github.io/encriptadorDesencriptador/"
+                        target="_blank" rel="noopener noreferrer"><img src="Proyectos/encriptadorDesencriptador.JPG"
                             title="Baby Shower" alt="Imagen Baby Shower"></a></p>
             </div>
             <br>
@@ -470,10 +490,10 @@
 
                 <div class="contenido">
                     <h1>
-                        Contactanos:
+                        Contáctenos:
                     </h1>
                     <h2>
-                        Escribenos podemos hacer realidad tu proyecto...
+                        Escríbenos podemos hacer realidad tu proyecto...
                     </h2>
                 </div>
 
