corrección de errores

--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
         <footer>
             <div class="footer">
                 <h1>Todos los derechos reservados</h1>
-                <h1><i class="fa-regular fa-copyright"></i> 2022</h1>
+                <h1><i class="fa-regular fa-copyright"></i> - 2022</h1>
             </div>
         </footer>
 
