Cambiando el perfil

--- a/index.html
+++ b/index.html
@@ -126,28 +126,12 @@
             <div class="accordion">
                 <input type="radio" name="select" class="accordion-select" checked />
                 <div class="accordion-title"><span>Sobre mi...</span></div>
-                <div class="accordion-content">Soy profesional en Ecología, con especialización tecnológica en
-                    Implementación de Sistemas de Gestión de
-                    Calidad para el sector agropecuario, con alta experiencia laboral en la Coordinación de la Encuesta
-                    Ambiental Industrial del DANE, Dirección, representación legal y administración de organizaciones no
-                    gubernamentales (ONG), educación ambiental, restauración ecológica, acuerdos con comunidades a
-                    partir
-                    de proyectos y talleres desarrollados con poblaciones indígenas, campesinos, afrodescendientes y
-                    estudiantes en Corporaciones Autónomas Regionales (CAR), ICBF, Universidades, Instituciones
-                    académicas
-                    de primaria, secundaria y comunidad en general del Suroccidente Colombiano y pacífico del
-                    departamento
-                    del Cauca, en temas como, la Ecología, las energías renovables, cercas vivas, cultivos
-                    silvopastoriles,
-                    agroecología, SIG, protección y recuperación de cuencas hidrográficas y protección de ambientes
-                    educativos; con experiencia en la elaboración de materiales de enseñanza a partir de la programación
-                    HTML 5, CSS, JavaScript, la creación de páginas web y videos documentales, con conocimientos
-                    avanzados
-                    en Excel, Adobe Premier - Adobe After Effects - Adobe Photoshop, producción audiovisual, edición,
-                    fotografía, diseño, administración de páginas Web y redes sociales; con habilidades en el uso
-                    adecuado de
-                    herramientas ofimáticas, educación formal y no formal. Soy una persona cumplida, puntual, ordenada,
-                    creativa, muy responsable.</div>
+                <div class="accordion-content">Profesional en Ecología, con especialización tecnológica en Implementación de Sistemas de Gestión de Calidad para el sector agropecuario y estudios en Derecho. 
+
+                    Poseo una amplia experiencia laboral, habiendo coordinado la Encuesta Ambiental Industrial del DANE en el sur occidente colombiano. He liderado la dirección, representación legal y administración de ONGs, promoviendo la educación ambiental y la restauración ecológica. He forjado acuerdos significativos con comunidades a través de proyectos y talleres con poblaciones indígenas, campesinos, afrodescendientes y estudiantes en diversas instituciones del Suroccidente Colombiano y el pacífico del departamento del Cauca.
+                    
+                    Mis áreas de experiencia incluyen la Ecología, energías renovables, cercas vivas, cultivos silvopastoriles, agroecología, SIG, así como la protección y recuperación de cuencas hidrográficas y ambientes educativos. Tengo experiencia en la creación de materiales didácticos utilizando videos documentales y poseo conocimientos avanzados en herramientas como Excel, Adobe Premier, After Effects, Photoshop, producción audiovisual, edición, fotografía, diseño web con HTML5, CSS3, JavaScript, control de versiones con Git y desarrollo con Node js. Mis habilidades también abarcan el uso eficiente de herramientas ofimáticas y metodologías de educación formal e informal. Me considero una persona cumplida, puntual, ordenada, creativa y muy responsable.
+                    </div>
                 <input type="radio" name="select" class="accordion-select" />
                 <div class="accordion-title"><span>Mis expectativas</span></div>
                 <div class="accordion-content">Implementar todos mis conocimientos y experiencia laboral en proyectos
