Cambiando archivos index.html

--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
          
             <a href=""
             target="_blank" rel="noopener noreferrer"><img src="imagenes/tiraimagenes4.png"
-            title="Fotos Enrique Erazo Benítez - Ecólogo" alt="Fotos"></a></p>
+            title="Fotos Enrique Erazo Benítez - Ecólogo" alt="Fotos"></a>
             
             <a href=""
             target="_blank" rel="noopener noreferrer"><img src="imagenes/tiraimagenes3.png"
-            title="Fotos Enrique Erazo Benítez - Ecólogo" alt="Fotos "></a></p>
+            title="Fotos Enrique Erazo Benítez - Ecólogo" alt="Fotos "></a>
 
         </div>
 
