Cambiando archivos index.html

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
 
     <a href=""
-    target="_blank" rel="noopener noreferrer"><img src="imagenes/tiraimagenes3.png"
+    target="_blank" rel="noopener noreferrer"><img src="imagenes/tiraimagenes3.PNG"
     title="Fotos Enrique Erazo Benítez - Ecólogo" alt="Fotos "></a>
 
 
