Cambiando archivos index.html

--- a/index.html
+++ b/index.html
@@ -139,8 +139,9 @@
             <P> *** Presidente y Representante Legal - Asociación Nacional de Ecólogos - ANEC - 2005</P>
            
         </div>
+
         <a href=""
-        target="_blank" rel="noopener noreferrer"><img src="imagenes/tiraimagenes4.png"
+        target="_blank" rel="noopener noreferrer"><img src="imagenes/tiraimagenes4.PNG"
         title="Fotos Enrique Erazo Benítez - Ecólogo" alt="Fotos"></a>
 
 
