Cambiando archivos index.html

--- a/index.html
+++ b/index.html
@@ -91,10 +91,11 @@
                 Enrique Erazo Benítez<span class="animacion">|</span>
             </h1>
             <h2 class="p__2">
-                Ecólogo - Productor audiovisual - Desarrollador Web Junior
+                Profesional en Ecología, con especialización tecnológica en Implementación 
+                de Sistemas de Gestión de Calidad para el sector agropecuario y estudios en Derecho.
             </h2>
             <p class="descripcion">
-                Desarrollador Front-End basado en CSS, HTML y JavaScript, estudiante actual del proyecto Oracle ONE en
+                Desarrollador Front-End basado en CSS, HTML y JavaScript del proyecto Oracle ONE en
                 Alura Latam.
             </p>
             <p>
