Cambiando archivos index.html

--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
                 Enrique Erazo Benítez<span class="animacion">|</span>
             </h1>
             <h2 class="p__2">
-                Profesional en Ecología, con especialización tecnológica en Implementación 
-                de Sistemas de Gestión de Calidad para el sector agropecuario y estudios en Derecho.
+                Profesional en Ecología, con especialización tecnológica en: 
+            <h2 class="p__2">
+                Implementación de Sistemas de Gestión de Calidad para el sector agropecuario y estudios en Derecho.
             </h2>
             <p class="descripcion">
-                Desarrollador Front-End basado en CSS, HTML y JavaScript del proyecto Oracle ONE en
-                Alura Latam.
+                Desarrollador Front-End basado en CSS, HTML y JavaScript del proyecto Oracle ONE en Alura Latam.
             </p>
             <p>
             <div class="socials">
