--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
                 Enrique Erazo Benítez<span class="animacion">|</span>
             </h1>
             <h2 class="p__2">
-                Profesional en Ecología, con especialización tecnológica en: 
+                Profesional en Ecología, con especialización tecnológica en: Implementación de Sistemas de Gestión de Calidad
             <h2 class="p__2">
-                Implementación de Sistemas de Gestión de Calidad para el sector agropecuario y estudios en Derecho.
+                 para el sector agropecuario y estudios en Derecho.
             </h2>
             <p class="descripcion">
                 Desarrollador Front-End basado en CSS, HTML y JavaScript del proyecto Oracle ONE en Alura Latam.
