arreglando vista en celulares

--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
 
         <div class="presentacion">
             <h1 class="p__1">
-                Enrique Erazo Benítez<span class="animacion">|</span>
+                Enrique Erazo Benítez<span class="animacion">↕</span>
             </h1>
             <h2 class="p__2">
                 Profesional en Ecología, con especialización tecnológica en: Implementación de Sistemas de Gestión de Calidad
-            <h2 class="p__2">
+            <Br>
                  para el sector agropecuario y estudios en Derecho.
             </h2>
             <p class="descripcion">
@@ -111,10 +111,8 @@
                     Vida <i class="fa-solid fa-square-arrow-up-right"></i></a>
             </div>
             </p>
-
-
-
         </div>
+
 
         <div class="bajame__esta__xd">
             <i class="fa-solid fa-arrow-pointer"></i>
@@ -124,7 +122,7 @@
         </div>
     </div>
 
-    <!--Fotos-->
+    <!--Trabajos realizados-->
 
         <div class="proyecto">
         <div class="titulo">
